# ai_hackaton

./: .dockerignore  .env  .gitignore  README.md  config.py  db.py  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
app/: Dockerfile  __init__.py  dashboard.py  data_access.py  live_analysis.py  main.py  settings.py
app/database/: database.py  fake_generator.py
app/live/: dashboard.py  ml.py  stream.py
app/utils/: action_normalization.py  analytics_helpers.py  path_sources.py
common/: __init__.py  runtime.py
experiments/: README.md  box_actions_demo.py  box_metrics_demo.py  extract_frames.py  extract_frames_for_training.py  pose_actions_demo.py  yolo_pose_test.py  yolo_test_determine.py  yolo_train.py
reference/: access_points.docx  warehouse_operations.xlsx
training/: __init__.py  dataset_tools.py  evaluate_model.py  inspect_dataset.py  prepare_dataset.py  train_model.py
video_pipeline/: Dockerfile  settings.py  yolo_final.py  zone_annotator.py
worker/: Dockerfile  __init__.py  config.py  define.py  extract_frames.py  main.py  pose_test.py  rules.py  service.py  settings.py  storage.py  tracking.py  yolo2.py  yolo_final.py  yolo_pose_test.py  yolo_test.py  yolo_test_determine.py  zone_annotator.py
worker/database/: config.py  db.py  events.db  gem.py
